# beach-time

./: .env  README.md  db.sql  package-lock.json  pyproject.toml
core/: api_registers.py  schemas.py  settings.py  urls.py
core/management/commands/: create_module_app.py
core/utils/: choices.py  classes.py  constants.py  filters_characters.py  model_utils.py  models.py  omitted_fields.py  resolve.py  validators.py
media/profile_pictures/: Modelo de Aceite de Orientação.doc
modules/address/: apps.py  controllers.py  models.py  repository.py  schemas.py  services.py
modules/address/migrations/: 0001_initial.py
modules/sports/: apps.py  controllers.py  models.py  repository.py  schemas.py  services.py
modules/sports/migrations/: 0001_initial.py  0002_favoritesport.py
modules/tokens/: apps.py  controllers.py  schemas.py
modules/users/: apps.py  controllers.py  models.py  repository.py  schemas.py  services.py  user_manager.py
modules/users/migrations/: 0001_initial.py  0002_customuser_phone_number.py
